pkginclude_HEADERS = ardev.h capture.h output_ffmpeg.h ffmpeg.h render_base.h artoolkit.h artoolkitplus.h output_x11.h output_Manage.h\
	render_face_model.h opencv_blobtrack.h player.h ardev_types.h \
	render_robot.h debug.h exception.h doc.h anttweakbar.h ardevconfig.h

include_HEADERS = ardevconfig.h